Fix alignment.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,6 +51,10 @@ body {
   font-size: 90%;
 }
 
+.right {
+  text-align: right;
+}
+
 /*** NAVIGATION ***/
 
 .nav li a, .nav li a:focus {
